--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             
             <!-- 프로필 사진 (하늘 있는 버전 + 사이즈 키움) -->
             <div class="mb-8"> <!-- 사진 아래 여백이 여유로운게 좋으면 8, 타이트한게 좋으면 6 -->
-                <img src="images/golden_gate_cut.jpeg" 
+                <img src="assets/images/golden_gate_cut.jpeg" 
                      onerror="this.src='https://ui-avatars.com/api/?name=Sunwoo+Jang&background=333&color=fff&size=256'"
                      alt="Sunwoo Jang"
                      class="w-44 h-auto rounded-lg shadow-md object-cover block">
@@ -108,7 +108,7 @@
                             </p>
                             <!-- Minimal Buttons -->
                             <div class="flex flex-wrap gap-3 text-[0.7rem] font-bold tracking-wider uppercase text-gray-500">
-                                <a href="#" target="_blank" rel="noopener noreferrer" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">PDF</a>
+                                <a href="assets/papers/esorics22-secquant.pdf" target="_blank" rel="noopener noreferrer" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">PDF</a>
                                 <!-- <a href="#" target="_blank" rel="noopener noreferrer" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">Code</a>
                                 <a href="#" target="_blank" rel="noopener noreferrer" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">Slides</a> -->
                             </div>
@@ -128,7 +128,7 @@
                                 <u class="decoration-1 underline-offset-4 decoration-gray-400">Sunwoo Jang</u>, Young-Kyoon Suh, Byungchul Tak
                             </p>
                             <div class="flex flex-wrap gap-3 text-[0.7rem] font-bold tracking-wider uppercase text-gray-500">
-                                <a href="#" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">PDF</a>
+                                <a href="assets/papers/ieice24-container.pdf" class="btn-artifact border border-gray-200 rounded px-3 py-1 hover:border-gray-900 hover:text-gray-900 transition duration-300">PDF</a>
                             </div>
                         </div>
                     </div>
