--- a/index.html
+++ b/index.html
@@ -52,23 +52,24 @@
                 
                 <!-- 아이콘 링크들 (새 탭 열기 적용) -->
                 <div class="flex flex-col gap-2 mt-6">
-                    <!-- CV -->
+                    <!-- CV Link (수정됨: 아이콘 w-5로 통일, 텍스트 볼드 제거, 잘림 해결) -->
                     <a href="assets/pdf/cv.pdf" target="_blank" rel="noopener noreferrer" class="group flex items-center gap-2 hover:text-blue-700 transition-colors">
-                        <!-- w-5 -> w-4로 변경하여 아래 아이콘들과 크기 통일 -->
-                        <svg class="w-4 h-4 text-gray-400 group-hover:text-blue-700 transition-colors" viewBox="0 0 24 24" fill="currentColor">
-                            <!-- font-size를 키워서 작은 박스 안에서도 CV가 잘 보이게 조정 -->
-                            <text x="50%" y="70%" dominant-baseline="middle" text-anchor="middle" font-family="Arial, sans-serif" font-weight="900" font-size="20" letter-spacing="-1">CV</text>
+                        <svg class="w-5 h-5 text-gray-400 group-hover:text-blue-700 transition-colors" viewBox="0 0 24 24" fill="currentColor">
+                            <!-- font-size를 16으로 줄여서 viewBox 안에 쏙 들어오게 조정 -->
+                            <text x="50%" y="65%" dominant-baseline="middle" text-anchor="middle" font-family="Arial, sans-serif" font-weight="900" font-size="16" letter-spacing="-0.5">CV</text>
                         </svg>
-                        <span class="font-semibold">Curriculum Vitae</span>
+                        <span>Curriculum Vitae</span>
                     </a>
-                    <!-- Google Scholar -->
+
+                    <!-- Google Scholar (수정됨: 아이콘 w-5로 키워서 위랑 맞춤) -->
                     <a href="https://scholar.google.co.kr/citations?user=_mLXrFsAAAAJ" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 hover:text-blue-700 transition-colors">
-                        <svg class="w-4 h-4 text-gray-400" fill="currentColor" viewBox="0 0 24 24"><path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"/></svg>
+                        <svg class="w-5 h-5 text-gray-400" fill="currentColor" viewBox="0 0 24 24"><path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"/></svg>
                         <span>Google Scholar</span>
                     </a>
-                    <!-- GitHub -->
+
+                    <!-- GitHub (수정됨: 아이콘 w-5로 키워서 위랑 맞춤) -->
                     <a href="https://github.com/swjang702" target="_blank" rel="noopener noreferrer" class="flex items-center gap-2 hover:text-blue-700 transition-colors">
-                        <svg class="w-4 h-4 text-gray-400" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                        <svg class="w-5 h-5 text-gray-400" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                         <span>GitHub</span>
                     </a>
                 </div>
