--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <!-- 아이콘 링크들 (새 탭 열기 적용) -->
                 <div class="flex flex-col gap-2 mt-6">
                     <!-- CV Link (수정됨: 아이콘 w-5로 통일, 텍스트 볼드 제거, 잘림 해결) -->
-                    <a href="assets/pdf/cv.pdf" target="_blank" rel="noopener noreferrer" class="group flex items-center gap-2 hover:text-blue-700 transition-colors">
+                    <a href="assets/cv.pdf" target="_blank" rel="noopener noreferrer" class="group flex items-center gap-2 hover:text-blue-700 transition-colors">
                         <svg class="w-5 h-5 text-gray-400 group-hover:text-blue-700 transition-colors" viewBox="0 0 24 24" fill="currentColor">
                             <!-- font-size를 16으로 줄여서 viewBox 안에 쏙 들어오게 조정 -->
                             <text x="50%" y="65%" dominant-baseline="middle" text-anchor="middle" font-family="Arial, sans-serif" font-weight="900" font-size="16" letter-spacing="-0.5">CV</text>
