--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sunwoo Jang - Systems Security Researcher</title>
+    <title>Sunwoo Jang</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
@@ -44,6 +44,7 @@
             <!-- 정보 및 링크 -->
             <div class="space-y-3 text-sm text-gray-600">
                 <!-- <p>Incoming PhD Student<br>@ [University Name]</p> -->
+                 <p></p>
                 
                 <!-- 이메일 (이메일은 보통 새 탭이 아니라 메일 앱이 열리므로 그대로 둡니다) -->
                 <a href="mailto:swjang702@gmail.com" class="block hover:text-blue-700 hover:underline decoration-1 underline-offset-2">
@@ -82,7 +83,7 @@
             <!-- 1. Bio Section -->
             <section class="mb-20 max-w-3xl">
                 <p class="text-[1.05rem] leading-8 text-gray-700 mb-6 font-light">
-                    I am a Security Researcher interested in <strong class="text-gray-900 font-semibold">Systems Security</strong>, specifically focused on operating system security and container runtime protection.
+                    Hi, I am Sunwoo Jang. My research interests lie in operating systems and systems security.
                 </p>
                 <p class="text-[1.05rem] leading-8 text-gray-700 font-light">
                     Currently, I am looking for PhD opportunities. My research goal is to build robust and verifiable security systems by bridging the gap between high-level abstractions and low-level system behaviors.
@@ -150,10 +151,9 @@
             </section>
 
 
-
              <!-- Footer (Center Aligned, Minimalist) -->
              <footer class="mt-auto pt-8 border-t border-gray-100 text-center text-xs text-gray-400">
-                <p>&copy; 2026 Sunwoo Jang. Last updated: Jan 15 2026.</p>
+                <p>&copy; 2026 Sunwoo Jang. Last updated: Jan 17 2026.</p>
             </footer>
 
         </main>
