updated about me

--- a/index.html
+++ b/index.html
@@ -82,11 +82,14 @@
             
             <!-- 1. Bio Section -->
             <section class="mb-20 max-w-3xl">
-                <p class="text-[1.05rem] leading-8 text-gray-700 mb-6 font-light">
-                    Hi, I am Sunwoo Jang. My research interests lie in operating systems and systems security.
+                <p class="text-[0.95rem] leading-8 text-gray-700 mb-6 font-light">
+                    Hi, I am Sunwoo Jang. I am interested in operating systems and systems security.
                 </p>
-                <p class="text-[1.05rem] leading-8 text-gray-700 font-light">
-                    Currently, I am looking for PhD opportunities. My research goal is to build robust and verifiable security systems by bridging the gap between high-level abstractions and low-level system behaviors.
+                <p class="text-[0.95rem] leading-8 text-gray-700 font-light">
+                    I am broadly interested in understanding how exploitability arises in real systems, particularly at the boundary between security abstractions and low-level system behavior.
+                </p>
+                <p class="text-[0.95rem] leading-8 text-gray-700 font-light">
+                    In previous work, I analyzed isolation boundaries in secure container runtimes, which shaped my interest in reasoning about system-level security guarantees.
                 </p>
             </section>
 
