updated design of about me

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
             
             <!-- 1. Bio Section -->
             <section class="mb-20 max-w-3xl">
-                <p class="text-[0.95rem] leading-8 text-gray-700 mb-6 font-light">
+                <p class="text-[0.85rem] leading-8 text-gray-700 mb-4">
                     Hi, I am Sunwoo Jang. I am interested in operating systems and systems security.
                 </p>
-                <p class="text-[0.95rem] leading-8 text-gray-700 font-light">
+                <p class="text-[0.85rem] leading-8 text-gray-700 mb-4">
                     I am broadly interested in understanding how exploitability arises in real systems, particularly at the boundary between security abstractions and low-level system behavior.
                 </p>
-                <p class="text-[0.95rem] leading-8 text-gray-700 font-light">
+                <p class="text-[0.85rem] leading-8 text-gray-700 mb-4">
                     In previous work, I analyzed isolation boundaries in secure container runtimes, which shaped my interest in reasoning about system-level security guarantees.
                 </p>
             </section>
