--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- [RIGHT CONTENT] -->
         <main class="content flex-1 min-h-screen flex flex-col">
             
-            <!-- 1. Bio Section -->
+            <!-- 1. Bio Section
             <section class="mb-20 max-w-3xl">
                 <p class="text-[0.85rem] leading-8 text-gray-700 mb-4">
                     Hi, I am Sunwoo Jang. I am interested in operating systems and systems security.
@@ -89,6 +89,19 @@
                     I am broadly interested in understanding how exploitability arises in real systems, particularly at the boundary between security abstractions and low-level system behavior.
                 </p>
                 <p class="text-[0.85rem] leading-8 text-gray-700 mb-4">
+                    In previous work, I analyzed isolation boundaries in secure container runtimes, which shaped my interest in reasoning about system-level security guarantees.
+                </p>
+            </section> -->
+
+            <!-- 1. Bio Section (Revised) -->
+            <section class="mb-16 max-w-3xl">
+                <!-- 첫 번째 문단: 나는 누구이며, 무엇에 관심이 있다 -->
+                <p class="text-[1.05rem] leading-relaxed text-gray-800 mb-6">
+                    Hi, I am Sunwoo Jang. I am interested in operating systems and systems security. I am broadly interested in understanding how exploitability arises in real systems, particularly at the boundary between security abstractions and low-level system behavior.
+                </p>
+                
+                <!-- 두 번째 문단: 과거 경험과 현재의 연결 -->
+                <p class="text-[1.05rem] leading-relaxed text-gray-800">
                     In previous work, I analyzed isolation boundaries in secure container runtimes, which shaped my interest in reasoning about system-level security guarantees.
                 </p>
             </section>
