--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
 
             <!-- 1. Bio Section (Revised) -->
             <section class="mb-16 max-w-3xl">
-                <!-- 첫 번째 문단: 나는 누구이며, 무엇에 관심이 있다 -->
-                <p class="text-[0.95rem] leading-relaxed text-gray-800 mb-6">
-                    Hi, I am Sunwoo Jang. I am interested in operating systems and systems security. I am broadly interested in understanding how exploitability arises in real systems, particularly at the boundary between security abstractions and low-level system behavior.
+                <p class="text-[0.95rem] leading-relaxed text-gray-800 mb-4">
+                    Hi, I am Sunwoo Jang. I am interested in operating systems and systems security.
                 </p>
-                
-                <!-- 두 번째 문단: 과거 경험과 현재의 연결 -->
+                <p class="text-[0.95rem] leading-relaxed text-gray-800 mb-4">
+                    In my previous work, I analyzed isolation boundaries and measured attack surfaces in secure container runtimes.
+                </p>
                 <p class="text-[0.95rem] leading-relaxed text-gray-800">
-                    In previous work, I analyzed isolation boundaries in secure container runtimes, which shaped my interest in reasoning about system-level security guarantees.
+                    More broadly, I am interested in preventing exploitability by design, by combining principled system design approaches such as formal verification with an understanding of real-world vulnerability and attack surfaces.
                 </p>
             </section>
 
